Bug 121663 - FILEOPEN DOCX Line Numbers and text created with Word have lower distance
Summary: FILEOPEN DOCX Line Numbers and text created with Word have lower distance
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: regression
: 66541 (view as bug list)
Depends on:
Blocks: DOCX-Page Line-Numbering
  Show dependency treegraph
 
Reported: 2018-11-23 10:03 UTC by NISZ LibreOffice Team
Modified: 2019-09-18 09:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer. (239.29 KB, image/png)
2018-11-23 10:04 UTC, NISZ LibreOffice Team
Details
Example file from Word (21.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-11-23 10:04 UTC, NISZ LibreOffice Team
Details
Numbering settings of the original document (121.42 KB, image/png)
2019-07-09 13:32 UTC, Gabor Kelemen (Collabora)
Details
Example compared in LO (133.57 KB, image/jpeg)
2019-09-17 10:28 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2018-11-23 10:03:39 UTC
Description:
Line Numbers and text in DOCX documents created with Microsoft Word 2010 have lower distance when the document is opened in LibreOffice Writer.

Steps to Reproduce:
    1. Create a new document in Microsoft Word.
    2. Type “=lorem(25)” and press Enter.
    3. On the Page Layout tab, in the Page Setup group, click Line Numbers.
    4. Select Continuous.
    5. Save the file as DOCX.
    6. Open the same file in LibreOffice Writer.
    7. Compare the original file opened in Word and Writer.

Actual Results:
There is lower distance between the text and the number when the document is opened in LibreOffice Writer.

Expected Results:
Numbers and text should have the same distance as in the original file when the document is opened in Microsoft Word 2010.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2018-11-23 10:04:05 UTC
Created attachment 146954 [details]
Screenshot of the original document side by side in Word and Writer.
Comment 2 NISZ LibreOffice Team 2018-11-23 10:04:21 UTC
Created attachment 146955 [details]
Example file from Word
Comment 3 Durgapriyanka 2018-11-26 22:52:50 UTC
I can confirm that the bug is present in

Microsoft Word 2007

Version: 6.0.6.2
Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 4 Dieter 2018-11-27 07:01:58 UTC
(In reply to Durgapriyanka from comment #3)
> I can confirm that the bug is present in
> 
> Microsoft Word 2007
> 
> Version: 6.0.6.2
> Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
> CPU threads: 2; OS: Windows 6.1; UI render: default; 
> Locale: en-US (en_US); Calc: group

Durgapriyanka, if you can confirm a bug report, you are also allowed to change the status to NEW.

=> Set status to NEW, because of comment 3
Comment 5 Gabor Kelemen (Collabora) 2019-07-09 13:32:18 UTC
Created attachment 152686 [details]
Numbering settings of the original document

By default Word uses the value of "Auto" which is in fact ~0.5 cm. This seems to be independent of page size / orientation in my Word 2013.
This is imported as 0.0 hence the difference.

If there is a non-Auto value set in Word then the import and export works fine.
Comment 6 Commit Notification 2019-07-10 08:32:00 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d828429f81e63d3c6beb4574fe3c52b001ea0a5b%5E%21

tdf#121663 DOCX import: fix missing space in line numbering

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-09-03 15:44:54 UTC
*** Bug 66541 has been marked as a duplicate of this bug. ***
Comment 8 Timur 2019-09-17 10:28:30 UTC
Created attachment 154218 [details]
Example compared in LO

Used to be OK in OO and LO 4.0, wrong in 4.2. Looks like a regression. Verified now.
Comment 9 Timur 2019-09-17 10:35:38 UTC
Please back port to 6.3
Comment 10 Xisco Faulí 2019-09-17 10:37:46 UTC
(In reply to Timur from comment #9)
> Please back port to 6.3

Done -> https://gerrit.libreoffice.org/#/c/79053/
Comment 11 Commit Notification 2019-09-18 09:34:39 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/129d5e09e0bc351bf77762067aa817b02bbb8e2f

tdf#121663 DOCX import: fix missing space in line numbering

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.