tdf#121663 DOCX import: fix missing space in line numbering

Auto distance of line numbering is 0.5 cm, not zero.

Change-Id: Ic451424bffb3eb3fe386bcaef5a476a5679faff2
Reviewed-on: https://gerrit.libreoffice.org/75317
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>